--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Diaverum API release
 
 env:
   DOTNET_VERSION: '9'
-  API_PROJECT_NAME: Diavreum.API
+  API_PROJECT_NAME: Diaverum.API
   API_NAME: wa-diaverum-api
 
 on:
