Add endpoints to submitt lab results and fetch lab results

--- a/Diaverum.API/appsettings.Development.json
+++ b/Diaverum.API/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "Database": {
-        //"ConnectionString": "Server=localhost\\SQLEXPRESS02;Initial Catalog=diaverum;persist security info=True;Integrated Security=SSPI;MultipleActiveResultSets=True;TrustServerCertificate=True",
-        "ConnectionString": "Server=dbs-diaverum.database.windows.net;Initial Catalog=db-diaverum;persist security info=True;user id=DiaAdmin;password=Diaverum2025!;MultipleActiveResultSets=True"
+        "ConnectionString": "Server=localhost\\SQLEXPRESS02;Initial Catalog=diaverum;persist security info=True;Integrated Security=SSPI;MultipleActiveResultSets=True;TrustServerCertificate=True",
+        //"ConnectionString": "Server=dbs-diaverum.database.windows.net;Initial Catalog=db-diaverum;persist security info=True;user id=DiaAdmin;password=Diaverum2025!;MultipleActiveResultSets=True"
     }
 }
